# OpenGlLearning

./: .gitattributes  .gitignore  .gitmodules
code/: CMakeLists.txt
code/assets/: TextureFrag.frag  TextureVertex.vert  fragementShader.frag  vertexShader.vert
code/assets/models/: Ship_TopDown.glb
code/engine/: Assets.h  Camera.h
code/game/: CMakeLists.txt  Shader.h  main.cpp
code/modelLoading/: CMakeLists.txt  Mesh.h  Model.h  main.cpp
